@@ -11,10 +11,10 @@ var CloudCommander, Util, DOM, CloudFunc, $;
         Menu                        = {},
         Position;
         
-    Menu.dir         = './lib/client/menu/';
+    Menu.dir                        = './lib/client/menu/';
     
     /* enable and disable menu constant */
-    Menu.ENABLED                  = false;
+    Menu.ENABLED                    = false;
     
     /* PRIVATE FUNCTIONS */
     
@@ -204,13 +204,6 @@ var CloudCommander, Util, DOM, CloudFunc, $;
             Menu.show,
             load
         ]));
-                
-        var lFunc = document.oncontextmenu;
-        document.oncontextmenu = function(){
-            Util.exec(lFunc);
-            return Menu.ENABLED;
-        };
-
         
         var key_event = (function(pEvent){
             /* если клавиши можно обрабатывать */
