@@ -6,8 +6,8 @@ var CloudCommander, Util, DOM, $, Github;
     
     var cloudcmd                        = CloudCommander,
         
-        CLIENT_ID,    //                   = '891c251b925e4e967fa9',
-        CLIENT_SECRET,//                   = 'afe9bed1e810c5dc44c4c2a953fc6efb1e5b0545',
+        CLIENT_ID,
+        CLIENT_SECRET,
         GithubStore                     = {};
         
     cloudcmd.Storage                    = {};
@@ -83,21 +83,7 @@ var CloudCommander, Util, DOM, $, Github;
                     }
                 }
             });
-            
-            /*
-            $.post("https://github.com/login/oauth/access_token",{
-                    client_id       : CLIENT_ID,
-                    client_secret   : CLIENT_SECRET,
-                    code            : lCode,
-                    state           : ''
-                },
-                
-                function(pDate){
-                    //GithubStore.Login(lToken);
-                    console.log(pDate);
-                }, "json");
-                */
-            }
+        }
         else
             cloudcmd.Auth();
     }
@@ -134,5 +120,5 @@ var CloudCommander, Util, DOM, $, Github;
         ]));        
     };
     
-    cloudcmd.Storage.Github    = GithubStore;
+    cloudcmd.Storage.GithubStore    = GithubStore;
 })();
